Update index view

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
  <h1> Kyle </h1>
-<img src="https://pixabay.com/en/hot-air-balloon-valley-sky-yellow-1373167/" />
+<img src="https://pixabay.com/static/uploads/photo/2016/05/05/02/35/hot-air-1373167_960_720.jpg" />
 <h2> I am a desktop support technician </h2>
 <p> I want to learn code because I think it is a fun hobby. </p>
 <a href="readmore">Read More</a>
