--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
  <h1> Kyle </h1>
-<img src="public/IMG_20150812_193556752.jpg" />
+<img src="IMG_20150812_193556752.jpg" />
 <h2> I am a desktop support technician </h2>
 <p> I want to learn code because I think it is a fun hobby. </p>
 <a href="readmore">Read More</a>
