Tweak the styling a bit

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,4 @@
+ <h1> Welcome to my Twitter profile! </h1>
 <div class ="profile">
 <h1> Kyle </h1>
 <img src="IMG_20150812_193556752.jpg" />
@@ -5,3 +6,4 @@
 <p> I want to learn code because I think it is a fun hobby. </p>
 <a href="readmore">Read More</a>
 </div>
+<img src="http://placekitten.com/g/50/50" />
