Some more style tweaking

--- a/public/style.css
+++ b/public/style.css
@@ -4,3 +4,20 @@
    marging: 10px;
    text-algin: center;
  }
+ .profile h1 {
+   font-size: 16px;
+   text-transform: uppercase;
+ }
+
+ .profile img {
+   width: 100px;
+   height: 100px;
+   border-radius: 50px;
+ }
+ html {
+  background: url('http://bit.ly/flickr-img') no-repeat center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+ }
