--- a/views/index.erb
+++ b/views/index.erb
@@ -6,4 +6,5 @@
 <p> I want to learn code because I think it is a fun hobby. </p>
 <a href="readmore">Read More</a>
 </div>
-<img src="http://placekitten.com/g/50/50" />
+ <img src="http://placekitten.com/g/50/50"
+      style="margin-left: 10px"/>
