Add read_more page

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
 <img src="IMG_20150812_193556752.jpg" />
 <h2> I am a desktop support technician </h2>
 <p> I want to learn code because I think it is a fun hobby. </p>
-<a href="readmore">Read More</a>
+<a href="read_more.erb">Read More</a>
 </div>
  <img src="http://placekitten.com/g/50/50"
       style="margin-left: 10px"/>
